<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (C) 2016 The Android Open Source Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<resources>
    <string name="app_name">SDA Assign3 2018 Colm O\'Sullivan</string>
    <string-array name="ui_time_entries">
        <item>" 2"</item>
        <item>" 3"</item>
        <item>" 4"</item>
        <item>" 5"</item>
        <item>" 10"</item>
        <item>" 14"</item>

    </string-array>
    <string name="customer_name">Name</string>
    <string name="ready_time">Delivery/Collection in (days)</string>
    <string name="order_message_1">Please find my order attached</string>
    <string name="order_message_collect">I will collect it in </string>
    <string name="order_message_instructions">Delivery -or- Collect: </string>
    <string name="order_message_end">Regards</string>
    <string name="customer_name_blank">You did not enter your name.</string>
    <string name="notification_title">Notification!</string>
    <string name="image_confirm">Image saved successfully </string>
    <string name="to_email">my-tshirt@sda.ie</string>
    <string name="email_subject">Order Request </string>
    <string name="product_list_layout">Product List</string>
    <string name="order_layout">Order T-Shirt</string>
    <string name="photo">Take Photo for T-Shirt</string>
    <string name="order">Send Order</string>
    <string name="name">Enter Your Name</string>
    <string name="t_shirt_image_description">Image / Button to let the user create an image for their t-shirt</string>
    <string name="delivery_collection">Delivery Address -or- For Collection</string>
    <string name="no_picture_taken">No picture has been taken, this action must be completed before an email is sent</string>
    <string name="select_delivery_or_collection">A delivery or collection option has not been entered, please do so before sending the email</string>
    <string name="order_message_delivery">Please deliver the t-shirt to:</string>


</resources>
